* [Bug 1037] Use all 16 of the MD5 passwords generated by ntp-keygen.
* Fixed the incorrect edge parameter being passed to time_pps_kcbind in
  NMEA refclock driver.
* [Bug 399] NMEA refclock driver does not honor time1 offset if flag3 set.
* [Bug 985] Modifications to NMEA reference clock driver to support Accord
  GPS Clock.
* poll time updates from Dave Mills.
* local refclock documentation updates from Dave Mills.
* [Bug 1022] Fix compilation problems with yesterday's commit.
* Updates and cleanup from Dave Mills:
  I've now spent eleven months of a sabbatical year - 7 days a week, 6-10
  hours most days - working on NTP. I have carefully reviewed every major
  algorithm, examined its original design and evolution from that design.
  I've trimmed off dead code and briar patches and did zillions of tests
  contrived to expose evil vulnerabilities. The development article is in
  rather good shape and should be ready for prime time.

  1. The protostats statistics files have been very useful in exposing
  little twitches and turns when something hiccups, like a broken PPS
  signal. Most of what used to be syslog messages are now repackaged as
  protostats messages with optional syslog as well. These can also be sent
  as traps which might be handy to tiggle a beeper or celltext. These, the
  sysstats files and cryptostats files reveal the ambient health of a busy
  server, monitor traffic and error counts and spot crypto attacks.

  2. Close inspection of the clock discipline behavior at long poll
  intervals (36 h) showed it not doing as well as it should. I redesigned
  the FLL loop to improve nominal accuracy from  several tens of
  milliseconds to something less than ten milliseconds.

  3. Autokey (again). The enhanced error checking was becoming a major
  pain. I found a way to toss out gobs of ugly fat code and replace the
  function with a much simpler and more comprehensive scheme. It resists