@@ -13,7 +13,7 @@
 		<h3>Server Options</h3>
 		<img src="pic/boom3a.gif" alt="gif" align="left"><a href="http://www.eecis.udel.edu/~mills/pictures.html">from <i>Pogo</i>, Walt Kelly</a>
 		<p>The chicken is getting configuration advice.</p>
-		<p>Last update: <csobj format="ShortTime" h="25" locale="00000409" region="0" t="DateTime" w="61">02:18</csobj> UTC <csobj format="LongDate" h="25" locale="00000409" region="0" t="DateTime" w="250">Sunday, March 02, 2008</csobj></p>
+		<p>Last update: <csobj format="ShortTime" h="25" locale="00000409" region="0" t="DateTime" w="61"></csobj><csobj format="LongDate" h="25" locale="00000409" region="0" t="DateTime" w="250"> July 5, 2008</csobj></p>
 		<br clear="left">
 		<h4>Related Links</h4>
 		<script type="text/javascript" language="javascript" src="scripts/command.txt"></script>
@@ -50,24 +50,33 @@
 			<dt><tt>autokey</tt>
 			<dd>Send and receive packets authenticated by the Aautokey scheme described in the <a href="authopt.html">Authentication Options</a> page. This option is valid only with <tt>server</tt> and <tt>peer</tt> commands and type s addresses. It is incompatible with the <tt>key</tt> option.<dt><tt>burst</tt>
 			<dd>When the server is reachable, send a burst of eight packets instead of the usual one. The packet spacing is normally 2 s; however, the spacing between the first and second packets can be changed with the <a href="miscopt.html"><tt>calldelay</tt></a> command to allow additional time for a modem or ISDN call to complete. This option is valid only with only the <tt>server</tt> command and type s addressesa. It is a recommended option when the <tt>maxpoll</tt> option is greater than 10 (1024 s).
-			<dt><tt>iburst</tt>
-			<dd>When the server is unreachable, send a burst of eight packets instead of the usual one. The packet spacing is normally 2 s; however, the spacing between the first and second packets can be changed with the <a href="miscopt.html"><tt>calldelay</tt></a> command to allow additional time for a modem or ISDN call to complete. This option is valid only with the <tt>server</tt> command and type s addresses. It is a recommended option with this command.<dt><tt>key</tt> <i><tt>key</tt></i>
-			<dd>Send and receive packets authenticated by the symmetric key scheme described in the <a href="authopt.html">Authentication Options</a> page. This option is valid only with <tt>server</tt> and <tt>peer</tt> commands and type s addresses. The <i><tt>key</tt></i> specifies the key identifier with values from 1 to 65534, inclusive. This option is incompatible with the <tt>autokey</tt> option.
-			<dt><tt>minpoll <i>minpoll<br>
-					</i></tt><tt>maxpoll <i>maxpoll</i></tt>
-			<dd>These options specify the minimum and maximum poll intervals for NTP messages, in seconds as a power of two. The maximum poll interval defaults to 10 (1024 s), but can be increased by the <tt>maxpoll</tt> option to an upper limit of 17 (36 h). The minimum poll interval defaults to 6 (64 s), but can be decreased by the <tt>minpoll</tt> option to a lower limit of 4 (16 s). These option are valid only with the <tt>server</tt> and <tt>peer</tt> commands and type s addresses.
-			<dt><tt>mode <i>option</i></tt>
-			<dd>Pass the <tt><i>option</i></tt> to a reference clock driver, where <tt><i>option</i></tt> is an integer in the range from 0 to 255, inclusive. This option is valid only with the <tt>server</tt> command and type r addresses.<dt><tt>noselect</tt>
-			<dd>Marks the server or peer to be ignored by the selection algorithm but visible to the monitoring program. This option is ignored with the <tt>broadcast</tt> command.<dt><tt>preempt</tt>
-			<dd>Specifies the association as preemptable rather than the default persistent. This option is ignored with the  <tt>broadcast</tt> command and is most useful with the <tt>manycastclient</tt> and <tt>pool</tt> commands.<dt><tt>prefer</tt>
-			<dd>Mark the server as preferred. All other things being equal, this host will be chosen for synchronization among a set of correctly operating hosts. See the <a href="prefer.html">Mitigation Rules and the <tt>prefer</tt> Keyword</a> page for further information. This option is valid only with the <tt>server</tt> and <tt>peer</tt> commands.
-			<dt><tt>true</tt>
-			<dd>Mark the association to assume truechimer status; that is, always survive the selection and clustering algorithms. This option can be used with any association, but is most useful for reference clocks with large jitter on the serial port and precision pulse-per-second (PPS) signals. Caution: this option defeats the algorithms designed to cast out falsetickers and can allow these sources to set the system clock. This option is valid only with the <tt>server</tt> and <tt>peer</tt> commands.
-			<dt><tt>ttl <i>ttl</i></tt>
-			<dd>This option specifies the time-to-live <i><tt>ttl</tt></i> for the <tt>broadcast</tt> commmand and the maximum <i><tt>ttl</tt></i> for the expanding ring search used by the <tt>manycastclient</tt> command. Selection of the proper value, which defaults to 127, is something of a black art and should be coordinated with the network administrator.<dt><tt>version <i>version</i></tt>
-			<dd>Specifies the version number to be used for outgoing NTP packets. Versions 1-4 are the choices, with version 4 the default.<dt><tt>dynamic</tt>
-			<dd>Allows a server/peer to be configured even if it is not reachable at configuration time. It is assumed that at some point in the future the network environment changes so that this server/peer can be reached. This option is useful to configure servers/peers on mobile systems with intermittent network access (e.g. wlan clients). Note: the current implemenation does not support this option.</dl>
-		<h4 id="aux">Auxilliary Commands</h4>
+			<dt><tt>dynamic</tt>
+            <dd>Allows a server/peer to be configured even if it is not reachable at configuration time. It is assumed that at some point in the future the network environment changes so that this server/peer can be reached. This option is useful to configure servers/peers on mobile systems with intermittent network access (e.g. wlan clients). Note: the current implemenation does not support this option.            
+	        <dt><tt>iburst</tt>
+		    <dd>When the server is unreachable, send a burst of eight packets instead of the usual one. The packet spacing is normally 2 s; however, the spacing between the first and second packets can be changed with the <a href="miscopt.html"><tt>calldelay</tt></a> command to allow additional time for a modem or ISDN call to complete. This option is valid only with the <tt>server</tt> command and type s addresses. It is a recommended option with this command.            
+		    <dt><tt>key</tt> <i><tt>key</tt></i>
+		    <dd>Send and receive packets authenticated by the symmetric key scheme described in the <a href="authopt.html">Authentication Options</a> page. This option is valid only with <tt>server</tt> and <tt>peer</tt> commands and type s addresses. The <i><tt>key</tt></i> specifies the key identifier with values from 1 to 65534, inclusive. This option is incompatible with the <tt>autokey</tt> option.
+		    <dt><tt>minpoll <i>minpoll<br>
+				    </i></tt><tt>maxpoll <i>maxpoll</i></tt>
+		    <dd>These options specify the minimum and maximum poll intervals for NTP messages, in seconds as a power of two. The maximum poll interval defaults to 10 (1024 s), but can be increased by the <tt>maxpoll</tt> option to an upper limit of 17 (36 h). The minimum poll interval defaults to 6 (64 s), but can be decreased by the <tt>minpoll</tt> option to a lower limit of 4 (16 s). These option are valid only with the <tt>server</tt> and <tt>peer</tt> commands and type s addresses.
+		    <dt><tt>mode <i>option</i></tt>
+		    <dd>Pass the <tt><i>option</i></tt> to a reference clock driver, where <tt><i>option</i></tt> is an integer in the range from 0 to 255, inclusive. This option is valid only with the <tt>server</tt> command and type r addresses.            
+		    <dt><tt>noselect</tt>
+		    <dd>Marks the server or peer to be ignored by the selection algorithm but visible to the monitoring program. This option is ignored with the <tt>broadcast</tt> command.            
+		    <dt><tt>preempt</tt>
+		    <dd>Specifies the association as preemptable rather than the default persistent. This option is ignored with the  <tt>broadcast</tt> command and is most useful with the <tt>manycastclient</tt> and <tt>pool</tt> commands.            
+		    <dt><tt>prefer</tt>
+		    <dd>Mark the server as preferred. All other things being equal, this host will be chosen for synchronization among a set of correctly operating hosts. See the <a href="prefer.html">Mitigation Rules and the <tt>prefer</tt> Keyword</a> page for further information. This option is valid only with the <tt>server</tt> and <tt>peer</tt> commands.
+		    <dt><tt>true</tt>
+		    <dd>Mark the association to assume truechimer status; that is, always survive the selection and clustering algorithms. This option can be used with any association, but is most useful for reference clocks with large jitter on the serial port and precision pulse-per-second (PPS) signals. Caution: this option defeats the algorithms designed to cast out falsetickers and can allow these sources to set the system clock. This option is valid only with the <tt>server</tt> and <tt>peer</tt> commands.
+		    <dt><tt>ttl <i>ttl</i></tt>
+		    <dd>This option specifies the time-to-live <i><tt>ttl</tt></i> for the <tt>broadcast</tt> commmand and the maximum <i><tt>ttl</tt></i> for the expanding ring search used by the <tt>manycastclient</tt> command. Selection of the proper value, which defaults to 127, is something of a black art and should be coordinated with the network administrator.            
+		    <dt><tt>version <i>version</i></tt>
+		    <dd>Specifies the version number to be used for outgoing NTP packets. Versions 1-4 are the choices, with version 4 the default.            
+			<dt><tt>xleave</tt>
+			<dd>Operate in interleaved mode (symmetric and broadcast modes only). (see <a href="x;eave.html">NTP Interleaved Modes</a>)
+		</dl>
+		<h4 id="aux">Auxilliary Commands</h4>                        
 		<dl>
 			<dt id="broadcastclient"><tt>broadcastclient [novolley]</tt>
 			<dd>Enable reception of broadcast server messages to any local interface (type b address). Ordinarily, upon receiving a message for the first time, the broadcast client measures the nominal server propagation delay using a brief client/server exchange, after which it continues in listen-only mode. If the <tt>novolley</tt> keyword is present, the exchange is not used and the value specified in the <tt>broadcastdelay</tt> command is used or, if the <tt>broadcastdelay</tt> command is not used, the default 4.0 ms. Note that, in order to avoid accidental or malicious disruption in this mode, both the server and client should operate using symmetric key or public key authentication as described in the <a href="authopt.html">Authentication Options</a> page. Note that the <tt>novolley</tt> keyword is incompatible with public key authentication.
