@@ -13,7 +13,7 @@
 		<h3><tt>ntpq</tt> - standard NTP query program</h3>
 		<img src="pic/bustardfly.gif" alt="gif" align="left"><a href="http://www.eecis.udel.edu/~mills/pictures.html">from <i>Pogo</i>, Walt Kelly</a>
 		<p>A typical NTP monitoring packet</p>
-		<p>Last update: <csobj format="ShortTime" h="25" locale="00000409" region="0" t="DateTime" w="61">23:58</csobj> UTC <csobj format="LongDate" h="25" locale="00000409" region="0" t="DateTime" w="223">Friday, April 04, 2008</csobj></p>
+		<p>Last update: <csobj format="ShortTime" h="25" locale="00000409" region="0" t="DateTime" w="61"></csobj><csobj format="LongDate" h="25" locale="00000409" region="0" t="DateTime" w="223">July 5, 2008</csobj></p>
 		<br clear="left">
 		<h4>More Help</h4>
 		<script type="text/javascript" language="javascript" src="scripts/manual.txt"></script>
@@ -406,7 +406,7 @@
 			</tr>
 			<tr>
 				<td><tt>headway</tt></td>
-				<td>headway (s)</td>
+				<td>headway (see <a href="rate.html">Rate Management and the Kiss-o'-Death Packet)</a></td>
 			</tr>
 			<tr>
 				<td><tt>flash</tt></td>
@@ -428,6 +428,10 @@
 				<td><tt>jitter</tt></td>
 				<td>filter jitter</td>
 			</tr>
+<tr>
+				<td><tt>xleave</tt></td>
+				<td>interleave delay (see <a href="xleave.html">NTP Interleaved Modes </a>)</td>
+		  </tr>
 		</table>
 		<p>When the NTPv4 daemon is compiled with the OpenSSL software library, additional peer variables are displayed, including the following:</p>
 		<table width="100%" border="1" cellspacing="2" cellpadding="2">
